Port most of the `world` package, excepting chunk data